# soundcloud.py

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
pdoc/: module.html.jinja2
soundcloud/: __init__.py  exceptions.py  request.py  requests.py  soundcloud.py
soundcloud/resource/: __init__.py  aliases.py  base.py  base_item.py  comment.py  conversation.py  download.py  graphql.py  history.py  like.py  message.py  playlist.py  response.py  stream.py  track.py  user.py  visuals.py  web_profile.py
tests/: test_auth.py  test_graphql.py  test_playlist.py  test_resolve.py  test_search.py  test_stream.py  test_track.py  test_user.py
