[metadata]
name = soundcloud-v2
version = 1.0.4
author = 7x11x13
author_email = x7x11x13@gmail.com
description = Python wrapper for the v2 SoundCloud API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/7x11x13/soundcloud.py
project_urls =
    Bug Tracker = https://github.com/7x11x13/soundcloud.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    dacite
    python-dateutil
    requests

[options.packages.find]
where = .

[options.extras_require]
test =
    coveralls
    pytest